# computational_physics_project

./: CMakeLists.txt  Dockerfile  README.md  env.hpp  grid_types.hpp  main.cpp  mdspan_utils.hpp  plotter.py  ranges.hpp  report.ipynb  tensor_buffer.hpp  test_mdspan_utils.cpp  test_tensor_buffer.cpp  test_w2_bssn_uniform_grid.cpp  w2_bssn_uniform_grid.cpp  w2_bssn_uniform_grid.hpp  w2_bssn_uniform_grid2.cpp
data/gauge-wave-run-1000-wout-enforcing-algebraic-constraints/: g11.txt  hamiltonian_inf_norm.txt  momentum_inf_norm.txt  steps
data/gauge-wave-run-1000-wout-ko-dissipation/: g11.txt  hamiltonian_inf_norm.txt  lapse.txt  log  momentum_inf_norm.txt  steps
data/gauge-wave-run-1000-wout-momentum-damping/: hamiltonian_inf_norm.txt  lapse.txt  log  momentum_inf_norm.txt  steps
data/gauge-wave-run-10000/: hamiltonian_inf_norm.txt  lapse.txt  log  momentum_inf_norm.txt  steps
data/gauge-wave-run-10000-wout-ko-dissipation/: g11.txt  hamiltonian_inf_norm.txt  lapse.txt  log  momentum_inf_norm.txt  steps
data/gauge-wave-run-10000-wout-momentum-damping/: g11.txt  hamiltonian_inf_norm.txt  lapse.txt  log  momentum_inf_norm.txt  steps
data/gauge-wave-run-40000/: hamiltonian_inf_norm.txt  lapse.txt  momentum_inf_norm.txt  steps
data/gauge-wave-run-40000-wout-W-clamp/: log  steps  time.txt
data/gauge-wave-run-40000-wout-momentum-damping/: g11.txt  hamiltonian_inf_norm.txt  lapse.txt  momentum_inf_norm.txt  steps
data/minkowski-run/: log  momentum_sum.txt  steps  time.txt
data/minkowski-run-40000/: g11.txt  log  steps
data/old_data/gauge-wave-run-1000/: hamiltonian_sum.txt  lapse.txt  log  momentum_sum.txt  steps
data/old_data/gauge-wave-run-1000-wout-W-clamp/: g11.txt  log  steps
data/old_data/gauge-wave-run-1000-wout-enforcing-algebraic-constraints/: hamiltonian_sum.txt  lapse.txt  momentum_sum.txt  steps
data/old_data/gauge-wave-run-1000-wout-momentum-constraint-damping/: g11.txt  hamiltonian_sum.txt  momentum_sum.txt  steps
data/old_data/gauge-wave-run-10000/: g11.txt  hamiltonian_sum.txt  momentum_sum.txt  steps
data/old_data/gauge-wave-run-40000/: g11.txt  log  steps
data/old_data/gauge-wave-run-40000-wout-W-clamp/: hamiltonian_sum.txt  momentum_sum.txt  steps
data/old_data/gauge-wave-run-40000-wout-momentum-constraint-damping/: hamiltonian_sum.txt  log  momentum_sum.txt  steps
data/old_data/minkowski-run-40000/: steps
idg/: einsum.hpp
image/: Dockerfile  README.md
w2_bssn_uniform_grid_dump/: algebraic_constraint_S.beve
